...
) {
    val openAlertDialog = remember { mutableStateOf(false) }
    val context = LocalContext.current
    Column {
        TextButton(
            onClick = resetNameAndBirthdate,
            modifier = Modifier.testTag("resetButton"),
        ) {
            Text(stringResource(R.string.reset_all))
        }
        TextButton(
            onClick = { openAlertDialog.value = true },
            modifier = Modifier.testTag("deleteAllButton"),
        ) {
            Text(stringResource(R.string.detele_all))
        }

        when {
            openAlertDialog.value -> {
...
