...
                "Baby $name: $daysBetween ${stringResource(id = R.string.days_old)}",
                style = TextStyle(fontWeight = androidx.compose.ui.text.font.FontWeight.Bold),
            )
            Spacer(modifier = Modifier.weight(1F))
            Button(onClick = { openFoodDialog.value = true }) {
                Text(text = "+")
                Image(painter = painterResource(id = R.drawable.bottle), contentDescription = "Bottle")
            }
        }
        Spacer(modifier = Modifier.height(12.dp))
        FoodOverview()
    }

...
